# fake-news-detector

./: .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_corroboration.py  0003_topic.py  0004_embeddings.py  0005_perf_indexes.py
backend/app/: config.py  db.py  main.py  models.py  schemas.py  worker.py
backend/app/api/: articles.py  meta.py
backend/app/ingest/: extract.py  feeds.py
backend/app/scoring/: backfill_embeddings.py  backfill_topics.py  content.py  corroboration.py  embeddings.py  fuse.py  prompt.py  reputation.py  rescore.py  rescore_corroboration.py  runner.py  settings.py
backend/config/: feeds.yaml  reputation.yaml  scoring.yaml
backend/tests/: test_canonicalize.py  test_corroboration.py  test_fuse.py  test_health.py  test_reputation.py
backend/tests/eval/: golden_set.yaml  run_eval.py
docs/: phase2-embedding-recall.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ArticleDetail.tsx  EngineStatus.tsx  FilterBar.tsx  ScoreBreakdown.tsx  ScoreCard.tsx  StatsHeader.tsx  TierBadge.tsx
frontend/src/pages/: Feed.tsx
launcher/: build.py  run_fakenews.py
scripts/: setup-native.ps1
