[project]
name = "fake-news-detector"
version = "0.1.0"
description = "Automated RSS ingestion + local-LLM credibility scoring pipeline"
requires-python = ">=3.12"

# Version floors only — `uv lock` resolves the exact latest compatible release.
# Verify pins before shipping (project dependency policy).
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

# M1 adds: feedparser, trafilatura
# M2 adds: openai, httpx, tenacity

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
